src/test/ui/issues/issue-46186.stderr
error: expected item, found `;`
  --> $DIR/issue-46186.rs:13:2
   |
LL | }; //~ ERROR expected item, found `;`
   |  ^ help: consider removing this semicolon
   |
   = help: braced struct declarations are not followed by a semicolon

error: aborting due to previous error

